fix host and calendar z-index, add calendar wrapper

--- a/src/css/Calendar.module.css
+++ b/src/css/Calendar.module.css
@@ -8,6 +8,7 @@
     border-radius: 1.25rem;
     padding: 1.875rem;
     z-index: 2;
+    background-color: white;
 }
 
 .mySelected {
